best_k round() fixed

--- a/HAZI/HAZI05/TEST.ipynb
+++ b/HAZI/HAZI05/TEST.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
     "\n",
     "        self.y_preds = None\n",
     "\n",
-    "    def train_test_split(self, features: pd.DataFrame, labels: pd.DataFrame) -> None:  # 3\n",
+    "    def train_test_split(self, features: pd.DataFrame, labels: pd.Series) -> None:  # 3\n",
     "\n",
     "        test_size = int(features.shape[0] * self.test_split_ratio)\n",
     "\n",
@@ -73,11 +73,11 @@
     "\n",
     "        assert features.shape[0] == test_size + train_size, \"Size mismatch!\"\n",
     "\n",
-    "        self.x_train, self.y_train = features.iloc[:train_size,\n",
-    "                                                   :], labels.iloc[:train_size].reset_index(drop=True)\n",
+    "        self.x_train  = features.iloc[:train_size, :].reset_index(drop=True)\n",
+    "        self.y_train = labels.iloc[:train_size].reset_index(drop=True)\n",
     "\n",
-    "        self.x_test, self.y_test = features.iloc[train_size:train_size +\n",
-    "                                                 test_size, :], labels.iloc[train_size:train_size + test_size].reset_index(drop=True)\n",
+    "        self.x_test = features.iloc[train_size:train_size + test_size, :].reset_index(drop=True)\n",
+    "        self.y_test = labels.iloc[train_size:train_size + test_size].reset_index(drop=True)\n",
     "\n",
     "    def euclidean(self, element_of_x: pd.DataFrame) -> pd.DataFrame:  # 4\n",
     "\n",
@@ -91,10 +91,12 @@
     "            distances = pd.concat([distances, self.y_train], axis=1).sort_values(by=0)\n",
     "            label_pred = mode(distances.iloc[:self.k,1],keepdims=False).mode\n",
     "            labels_pred.append(label_pred)\n",
-    "        self.y_preds = pd.DataFrame(labels_pred)\n",
+    "        self.y_preds = pd.Series(labels_pred)\n",
     "\n",
     "    def accuracy(self) -> float:  # 6\n",
-    "        true_positive = (self.y_test.iloc[:, 0] == self.y_preds.iloc[:, 0]).sum()\n",
+    "        #self.y_test, self.y_preds = self.y_test.align(self.y_preds, axis=1, copy=False)\n",
+    "        #self.y_test.columns.name = None\n",
+    "        true_positive = (self.y_test == self.y_preds).sum()\n",
     "\n",
     "        return true_positive / self.y_test.shape[0] * 100\n",
     "\n",
@@ -105,54 +107,191 @@
     "\n",
     "    def best_k(self):\n",
     "        ret = tuple((1, -1))\n",
+    "        og_k = self.k\n",
     "        for i in range(1, 21):\n",
     "            self.k = i\n",
     "            self.predict(self.x_test)\n",
-    "            acc = self.accuracy()\n",
+    "            acc = round(self.accuracy(), 2)\n",
     "            if acc > ret[1]:\n",
-    "                ret = (self.k, acc.round(2))\n",
-    "\n",
+    "                ret = (self.k, acc)\n",
     "        return ret\n",
     "\n",
     "    @staticmethod\n",
-    "    def load_csv(csv_path: str) -> Tuple[pd.DataFrame, pd.DataFrame]:  # 2\n",
+    "    def load_csv(csv_path: str) -> Tuple[pd.DataFrame, pd.Series]:  # 2\n",
     "        df = pd.read_csv(csv_path)\n",
     "        df = df.sample(frac=1, random_state=42, ignore_index=True)\n",
     "        x_ = df.iloc[:, :-1]\n",
     "        # pd.DataFrame(df['Outcome']) dupla [[]] = dataframet ad vissza series helyett\n",
-    "        y_ = pd.DataFrame(df.iloc[:, -1])\n",
+    "        y_ = df.iloc[:, -1] #dataframe/series\n",
     "\n",
     "        return x_, y_\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNNClassifier(9, 0.2)\n",
+    "x, y = knn.load_csv(r'C:\\Users\\darab\\source\\repos\\BEVADAT\\QYZF3M_BEVADAT2022232\\HAZI\\HAZI05\\diabetes.csv')\n",
+    "knn.train_test_split(x, y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[86,  9],\n",
-       "       [31, 27]], dtype=int64)"
+       "(9, 75.16)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "knn = KNNClassifier(3, 0.2)\n",
-    "x, y = knn.load_csv(r'C:\\Users\\darab\\source\\repos\\BEVADAT\\QYZF3M_BEVADAT2022232\\HAZI\\HAZI05\\diabetes.csv')\n",
-    "\n",
-    "knn.train_test_split(x, y)\n",
     "\n",
     "knn.predict(knn.x_test)\n",
-    "\n",
     "knn.best_k()\n",
-    "knn.confusion_matrix()\n",
-    "\n"
+    "#knn.y_test\n",
+    "\n",
+    "#knn.accuracy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>153 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0\n",
+       "0    0.0\n",
+       "1    0.4\n",
+       "2    0.6\n",
+       "3    0.6\n",
+       "4    0.6\n",
+       "..   ...\n",
+       "148  0.6\n",
+       "149  0.0\n",
+       "150  0.4\n",
+       "151  0.8\n",
+       "152  0.4\n",
+       "\n",
+       "[153 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn_n = KNeighborsRegressor(n_neighbors=5)\n",
+    "knn_n.fit(knn.x_train, knn.y_train)\n",
+    "# Make point predictions on the test set using the fit model.\n",
+    "predictions = knn_n.predict(knn.x_test)\n",
+    "pd.DataFrame(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.Series([1, 2, 3])\n",
+    "s.shape[0] * 100"
    ]
   }
  ],
