--- a/GYAK/GYAK05/lesson.ipynb
+++ b/GYAK/GYAK05/lesson.ipynb
@@ -727,7 +727,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b2532e59ff2e8459df16beaeea4e3a8d7ced2c67c8d1a79f857a2bc4535fba1f"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
