--- a/HAZI/HAZI06/TEST06.ipynb
+++ b/HAZI/HAZI06/TEST06.ipynb
@@ -2,21 +2,261 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'datetime'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mNJCleaner\u001b[39;00m \u001b[39mimport\u001b[39;00m NJCleaner\n\u001b[0;32m      3\u001b[0m nj \u001b[39m=\u001b[39m NJCleaner(\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mdarab\u001b[39m\u001b[39m\\\u001b[39m\u001b[39msource\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mrepos\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mBEVADAT\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mQYZF3M_BEVADAT2022232\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mHAZI\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mHAZI06\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m2018_03.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m nj\u001b[39m.\u001b[39;49mconvert_date_to_day()\n",
-      "File \u001b[1;32mc:\\Users\\darab\\source\\repos\\BEVADAT\\QYZF3M_BEVADAT2022232\\HAZI\\HAZI06\\NJCleaner.py:23\u001b[0m, in \u001b[0;36mNJCleaner.convert_date_to_day\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mconvert_date_to_day\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m pd\u001b[39m.\u001b[39mDataFrame():\n\u001b[0;32m     22\u001b[0m     df \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdrop_columns_and_nan()\n\u001b[1;32m---> 23\u001b[0m     df[\u001b[39m'\u001b[39m\u001b[39mday\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39;49m\u001b[39mdate\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mdatetime\u001b[39m.\u001b[39mweekday()\n\u001b[0;32m     24\u001b[0m     \u001b[39mreturn\u001b[39;00m df\n",
-      "File \u001b[1;32mc:\\Users\\darab\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\generic.py:5487\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5480\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   5481\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[0;32m   5482\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[0;32m   5483\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[0;32m   5484\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5485\u001b[0m ):\n\u001b[0;32m   5486\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[1;32m-> 5487\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'datetime'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>train_id</th>\n",
+       "      <th>stop_sequence</th>\n",
+       "      <th>from_id</th>\n",
+       "      <th>to_id</th>\n",
+       "      <th>scheduled_time</th>\n",
+       "      <th>actual_time</th>\n",
+       "      <th>delay_minutes</th>\n",
+       "      <th>status</th>\n",
+       "      <th>line</th>\n",
+       "      <th>type</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>3805</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>105</td>\n",
+       "      <td>2018-03-02 01:22:00</td>\n",
+       "      <td>2018-03-02 01:21:05</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Northeast Corrdr</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>3805</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>38187</td>\n",
+       "      <td>2018-03-02 01:31:00</td>\n",
+       "      <td>2018-03-02 01:31:08</td>\n",
+       "      <td>0.133333</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Northeast Corrdr</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>3805</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>38187</td>\n",
+       "      <td>107</td>\n",
+       "      <td>2018-03-02 01:40:00</td>\n",
+       "      <td>2018-03-02 01:40:07</td>\n",
+       "      <td>0.116667</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Northeast Corrdr</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>3805</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>107</td>\n",
+       "      <td>37953</td>\n",
+       "      <td>2018-03-02 01:45:00</td>\n",
+       "      <td>2018-03-02 01:45:10</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Northeast Corrdr</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>3805</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>37953</td>\n",
+       "      <td>109</td>\n",
+       "      <td>2018-03-02 01:49:00</td>\n",
+       "      <td>2018-03-02 01:49:10</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Northeast Corrdr</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256503</th>\n",
+       "      <td>2018-03-31</td>\n",
+       "      <td>0534</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2018-03-31 19:02:00</td>\n",
+       "      <td>2018-03-31 19:05:07</td>\n",
+       "      <td>3.116667</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Montclair-Boonton</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256504</th>\n",
+       "      <td>2018-03-31</td>\n",
+       "      <td>0534</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2018-03-31 19:05:00</td>\n",
+       "      <td>2018-03-31 19:08:06</td>\n",
+       "      <td>3.100000</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Montclair-Boonton</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256505</th>\n",
+       "      <td>2018-03-31</td>\n",
+       "      <td>0534</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>154</td>\n",
+       "      <td>2018-03-31 19:07:00</td>\n",
+       "      <td>2018-03-31 19:10:11</td>\n",
+       "      <td>3.183333</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Montclair-Boonton</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256506</th>\n",
+       "      <td>2018-03-31</td>\n",
+       "      <td>0534</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>154</td>\n",
+       "      <td>106</td>\n",
+       "      <td>2018-03-31 19:13:00</td>\n",
+       "      <td>2018-03-31 19:21:02</td>\n",
+       "      <td>8.033333</td>\n",
+       "      <td>departed</td>\n",
+       "      <td>Montclair-Boonton</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256507</th>\n",
+       "      <td>2018-03-31</td>\n",
+       "      <td>0534</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>106</td>\n",
+       "      <td>63</td>\n",
+       "      <td>2018-03-31 19:38:00</td>\n",
+       "      <td>2018-03-31 19:37:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>estimated</td>\n",
+       "      <td>Montclair-Boonton</td>\n",
+       "      <td>NJ Transit</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>243028 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date train_id  stop_sequence  from_id  to_id  \\\n",
+       "0       2018-03-01     3805            1.0      105    105   \n",
+       "1       2018-03-01     3805            2.0      105  38187   \n",
+       "2       2018-03-01     3805            3.0    38187    107   \n",
+       "3       2018-03-01     3805            4.0      107  37953   \n",
+       "4       2018-03-01     3805            5.0    37953    109   \n",
+       "...            ...      ...            ...      ...    ...   \n",
+       "256503  2018-03-31     0534            2.0       14     50   \n",
+       "256504  2018-03-31     0534            3.0       50     19   \n",
+       "256505  2018-03-31     0534            4.0       19    154   \n",
+       "256506  2018-03-31     0534            5.0      154    106   \n",
+       "256507  2018-03-31     0534            6.0      106     63   \n",
+       "\n",
+       "             scheduled_time          actual_time  delay_minutes     status  \\\n",
+       "0       2018-03-02 01:22:00  2018-03-02 01:21:05       0.000000   departed   \n",
+       "1       2018-03-02 01:31:00  2018-03-02 01:31:08       0.133333   departed   \n",
+       "2       2018-03-02 01:40:00  2018-03-02 01:40:07       0.116667   departed   \n",
+       "3       2018-03-02 01:45:00  2018-03-02 01:45:10       0.166667   departed   \n",
+       "4       2018-03-02 01:49:00  2018-03-02 01:49:10       0.166667   departed   \n",
+       "...                     ...                  ...            ...        ...   \n",
+       "256503  2018-03-31 19:02:00  2018-03-31 19:05:07       3.116667   departed   \n",
+       "256504  2018-03-31 19:05:00  2018-03-31 19:08:06       3.100000   departed   \n",
+       "256505  2018-03-31 19:07:00  2018-03-31 19:10:11       3.183333   departed   \n",
+       "256506  2018-03-31 19:13:00  2018-03-31 19:21:02       8.033333   departed   \n",
+       "256507  2018-03-31 19:38:00  2018-03-31 19:37:00       0.000000  estimated   \n",
+       "\n",
+       "                     line        type       day  \n",
+       "0        Northeast Corrdr  NJ Transit  Thursday  \n",
+       "1        Northeast Corrdr  NJ Transit  Thursday  \n",
+       "2        Northeast Corrdr  NJ Transit  Thursday  \n",
+       "3        Northeast Corrdr  NJ Transit  Thursday  \n",
+       "4        Northeast Corrdr  NJ Transit  Thursday  \n",
+       "...                   ...         ...       ...  \n",
+       "256503  Montclair-Boonton  NJ Transit  Saturday  \n",
+       "256504  Montclair-Boonton  NJ Transit  Saturday  \n",
+       "256505  Montclair-Boonton  NJ Transit  Saturday  \n",
+       "256506  Montclair-Boonton  NJ Transit  Saturday  \n",
+       "256507  Montclair-Boonton  NJ Transit  Saturday  \n",
+       "\n",
+       "[243028 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
