--- a/HAZI/HAZI06/TEST06.ipynb
+++ b/HAZI/HAZI06/TEST06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "#nj.convert_scheduled_time_to_part_of_the_day().iloc[:-1278, :]\n",
     "#nj.convert_delay()\n",
     "#nj.drop_unnecessary_columns()\n",
-    "nj.save_first_60k(r'C:\\Users\\darab\\source\\repos\\BEVADAT\\QYZF3M_BEVADAT2022232\\HAZI\\HAZI06\\testeset.csv')\n"
+    "#nj.save_first_60k(r'C:\\Users\\darab\\source\\repos\\BEVADAT\\QYZF3M_BEVADAT2022232\\HAZI\\HAZI06\\testeset.csv')\n",
+    "nj.prep_df('testeset.csv')\n"
    ]
   }
  ],
