--- a/GYAK/GYAK08/LinearRegression.ipynb
+++ b/GYAK/GYAK08/LinearRegression.ipynb
@@ -67,9 +67,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "iris.target.shape"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,18 +75,9 @@
         "id": "OvDsMfz4bjh0",
         "outputId": "c32bf7fb-3e40-4635-b017-17537c285558"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(150,)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
+      "outputs": [],
+      "source": [
+        "iris.target.shape"
       ]
     },
     {
@@ -139,17 +128,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "I4kNcoovc7Mn"
+      },
+      "outputs": [],
       "source": [
         "print(type(X))\n",
         "print(type(y))\n",
         "print(X.shape)\n",
         "print(y.shape)\n"
-      ],
-      "metadata": {
-        "id": "I4kNcoovc7Mn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -302,12 +291,97 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Uv18Axv4CPIT"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1.1833333333333333\n",
+            "-0.037049758617444216\n",
+            "-0.06751312148702707\n",
+            "-0.06608896243537175\n",
+            "-0.06388378574669487\n",
+            "-0.0617306814483276\n",
+            "-0.059649566643510905\n",
+            "-0.05763859655374806\n",
+            "-0.05569542202508642\n",
+            "-0.05381775788059819\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "([1.5719142799291432,\n",
+              "  0.5345177185631234,\n",
+              "  2.3326717582642242,\n",
+              "  1.5027545091714085,\n",
+              "  1.6064941653080103,\n",
+              "  0.4653579478053888,\n",
+              "  1.1915355407616026,\n",
+              "  1.7102338214446122,\n",
+              "  1.5027545091714085,\n",
+              "  1.2952751968982046,\n",
+              "  1.7102338214446122,\n",
+              "  0.43077806242652145,\n",
+              "  0.39619817704765414,\n",
+              "  0.4653579478053888,\n",
+              "  0.4653579478053888,\n",
+              "  1.5719142799291432,\n",
+              "  1.9522930190966834,\n",
+              "  1.2952751968982046,\n",
+              "  1.5027545091714085,\n",
+              "  1.883133248338949,\n",
+              "  0.49993783318425616,\n",
+              "  1.6410740506868777,\n",
+              "  0.49993783318425616,\n",
+              "  1.883133248338949,\n",
+              "  2.1597723313698878,\n",
+              "  1.7448137068234797,\n",
+              "  1.9522930190966834,\n",
+              "  1.9868729044755509,\n",
+              "  0.43077806242652145,\n",
+              "  0.49993783318425616],\n",
+              " array([1.2, 0.3, 2.3, 1.5, 1.4, 0.4, 1.3, 2.3, 1.5, 1.2, 2. , 0.1, 0.2,\n",
+              "        0.1, 0.3, 1.6, 2.2, 1.1, 1.3, 2.2, 0.2, 1.8, 0.4, 2.1, 2. , 2.3,\n",
+              "        1.8, 2.3, 0.3, 0.2]))"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "from matplotlib import pyplot as plt\n",
+        "\n",
+        "from LinearRegressionSkeleton import LinearRegression\n",
+        "\n",
+        "\n",
+        "# Load the iris dataset\n",
+        "iris = load_iris()\n",
+        "df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+        "X = df['petal length (cm)'].values\n",
+        "y = df['petal width (cm)'].values\n",
+        "\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "\n",
+        "\n",
+        "linReg = LinearRegression()\n",
+        "linReg.fit(X_train, Y_train)\n",
+        "linReg.predict(X_test), Y_test\n",
+        "\n"
+      ]
     }
   ],
   "metadata": {
@@ -329,9 +403,14 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.0"
+      "version": "3.9.7"
     },
-    "orig_nbformat": 4
+    "orig_nbformat": 4,
+    "vscode": {
+      "interpreter": {
+        "hash": "b2532e59ff2e8459df16beaeea4e3a8d7ced2c67c8d1a79f857a2bc4535fba1f"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
