--- a/GYAK/GYAK08/LinearRegression.ipynb
+++ b/GYAK/GYAK08/LinearRegression.ipynb
@@ -303,11 +303,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "id": "Uv18Axv4CPIT"
       },
       "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<script>Jupyter.notebook.kernel.restart()</script>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -322,13 +331,17 @@
             "0.03370169369652266\n",
             "0.022415255815467452\n",
             "0.01490855913050418\n",
-            "(30,) (30,)\n",
+            "testtsetsetsetsetse\n",
             "Mean Absolute Error: 0.27839296733704516\n",
             "Mean Squared Error: 0.16735511597970598\n"
           ]
         }
       ],
       "source": [
+        "from IPython.display import display_html\n",
+        "\n",
+        "display_html(\"<script>Jupyter.notebook.kernel.restart()</script>\",raw=True)\n",
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.datasets import load_iris\n",
@@ -336,8 +349,11 @@
         "from sklearn.metrics import accuracy_score\n",
         "\n",
         "from matplotlib import pyplot as plt\n",
-        "\n",
+        "import LinearRegressionSkeleton\n",
         "from LinearRegressionSkeleton import LinearRegression\n",
+        "\n",
+        "from importlib import reload\n",
+        "LinearRegressionSkeleton = reload(LinearRegressionSkeleton)\n",
         "\n",
         "\n",
         "# Load the iris dataset\n",
