--- a/HAZI/HAZI08/HAZI08.ipynb
+++ b/HAZI/HAZI08/HAZI08.ipynb
@@ -222,7 +222,11 @@
     "import HAZI08\n",
     "HAZI08 = reload(HAZI08)\n",
     "\n",
-    "HAZI08.train_linear_regression(X_train=X_train, y_train=y_train)"
+    "X, y = load_iris(return_X_y=True)\n",
+    "X_train, X_test, y_train, y_test = HAZI08.split_data(X, y)\n",
+    "\n",
+    "lin_model = HAZI08.train_linear_regression(X_train=X_train, y_train=y_train)\n",
+    "log_model = HAZI08.train_logistic_regression(X_train=X_train, y_train=y_train)"
    ]
   },
   {
@@ -246,9 +250,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "log_model = HAZI08.train_linear_regression(X_train=X_train, y_train=y_train)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -272,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = HAZI08.predict(log_model, X_test)"
+    "y_pred = HAZI08.predict(lin_model, X_test)"
    ]
   },
   {
