--- a/GYAK/GYAK10/dense_native.ipynb
+++ b/GYAK/GYAK10/dense_native.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "u2KPPpxIR68N"
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "id": "cCYB_GSWR68R"
       },
@@ -46,20 +46,45 @@
         "        self.W = np.random.normal(0.0, 1, (self.n_input, self.n_output))\n",
         "        self.bias = np.random.random(size=(self.n_output))\n",
         "\n",
+        "    '''def forward_pass_a(self, X):\n",
+        "        output = np.zeros(3)\n",
+        "        for row in range()\n",
+        "        for i in range(self.n_output):\n",
+        "            temp = 0\n",
+        "            for j in range(self.n_output):\n",
+        "                temp += X[j]*self.W[j, i]\n",
+        "            output[i] = temp + self.bias[i]\n",
+        "\n",
+        "        return output'''\n",
+        "\n",
         "    def forward_pass_a(self, X):\n",
-        "        pass"
+        "        return X @ self.W + self.bias"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "id": "yj1pUR1PR68S",
         "outputId": "4dfc2582-41f3-46c1-d4c5-5b2752b5fd8e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1 2 3 4 5]\n",
+            "[1 2 3 4 5]\n",
+            "[ 12.27231674  -9.584845   -11.42437206]\n"
+          ]
+        }
+      ],
       "source": [
         "input_data = np.array([[1, 2, 3, 4, 5]])\n",
+        "input_data.resize((5,))\n",
+        "print(input_data)\n",
+        "#input_data = np.array([1, 2, 3, 4, 5])\n",
+        "print(input_data)\n",
         "layer = Dense(3, n_input=5)\n",
         "\n",
         "output = layer.forward_pass_a(input_data)\n",
@@ -68,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "id": "aqkjwD_rR68S"
       },
@@ -76,17 +101,25 @@
       "source": [
         "class ReLU():\n",
         "    def forward_pass(self, x):\n",
-        "        pass"
+        "        return np.where(x >= 0, x, 0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "id": "zAbc2UPqR68T",
         "outputId": "86c621e0-8ebb-40cd-c8c7-30b0ecbb8fab"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[12.27231674  0.          0.        ]\n"
+          ]
+        }
+      ],
       "source": [
         "activation = ReLU()\n",
         "print(activation.forward_pass(output))"
@@ -98,7 +131,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.11.0 64-bit",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -112,12 +145,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.2"
+      "version": "3.9.7"
     },
     "orig_nbformat": 4,
     "vscode": {
       "interpreter": {
-        "hash": "9cefe38f745df9e33a66570f2e5a410ba71c4ae3bf929b6ad1b474ac5f904d76"
+        "hash": "b2532e59ff2e8459df16beaeea4e3a8d7ced2c67c8d1a79f857a2bc4535fba1f"
       }
     }
   },
