--- a/GYAK/GYAK10/dense_native.ipynb
+++ b/GYAK/GYAK10/dense_native.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 74,
       "metadata": {
         "id": "u2KPPpxIR68N"
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 75,
       "metadata": {
         "id": "cCYB_GSWR68R"
       },
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 76,
       "metadata": {
         "id": "yj1pUR1PR68S",
         "outputId": "4dfc2582-41f3-46c1-d4c5-5b2752b5fd8e"
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 77,
       "metadata": {
         "id": "aqkjwD_rR68S"
       },
@@ -106,11 +106,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 78,
       "metadata": {
         "id": "zAbc2UPqR68T",
         "outputId": "86c621e0-8ebb-40cd-c8c7-30b0ecbb8fab"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[12.27231674  0.          0.        ]\n"
+          ]
+        }
+      ],
+      "source": [
+        "activation = ReLU()\n",
+        "print(activation.forward_pass(output))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 79,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import GYAK10\n",
+        "from importlib import reload\n",
+        "GYAK10 = reload(GYAK10)\n",
+        "from GYAK10 import Dense, ReLU\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 82,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1 2 3 4 5]\n",
+            "[1 2 3 4 5]\n",
+            "[ 12.27231674  -9.584845   -11.42437206]\n"
+          ]
+        }
+      ],
+      "source": [
+        "input_data = np.array([[1, 2, 3, 4, 5]])\n",
+        "input_data.resize((5,))\n",
+        "print(input_data)\n",
+        "#input_data = np.array([1, 2, 3, 4, 5])\n",
+        "print(input_data)\n",
+        "layer = GYAK10.Dense(3, n_input=5)\n",
+        "\n",
+        "output = layer.forward_pass_a(input_data)\n",
+        "print(output)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 81,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
